@@ -1,5 +1,6 @@
 master
 - Mayhem
+  Add an option to disable 4chan's inline extension. Enabled by default.
   Fix compatibility with Scriptish's auto-udpater.
 
 2.34.10
